--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "target": "ES5",
+    "target": "ES6",
     "module": "commonjs",
     "moduleResolution": "node",
     "sourceMap": true,
@@ -8,7 +8,9 @@
     "experimentalDecorators": true,
 		"rootDir": "src",
 		"outDir": "dist",
-		"declaration": true
+    "declaration": true,
+    "forceConsistentCasingInFileNames": true,
+    "downlevelIteration": true
   },
 	"exclude": [
 		"./node_modules",
